fixed horizontal scroll mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -15,6 +15,11 @@ $green: #053B1F;
     padding: 0;
 }
 
+html, body{
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body{
     background-color: $beigeBackground;
 }
